--- a/WhoPays?/WhoPays.storyboard
+++ b/WhoPays?/WhoPays.storyboard
@@ -38,7 +38,7 @@
                     </view>
                     <connections>
                         <outlet property="signInButton" destination="XMT-1y-9bq" id="Okn-Hy-s6W"/>
-                        <segue destination="oLk-UB-GxU" kind="modal" identifier="toGroupsSegue" modalTransitionStyle="flipHorizontal" id="v4D-hv-iUn"/>
+                        <segue destination="LFF-Fc-4N0" kind="modal" identifier="toGroupsSegue" modalTransitionStyle="flipHorizontal" id="v4D-hv-iUn"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yjZ-NC-ceZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -55,7 +55,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Member Cell" id="wHZ-j1-AhK">
-                                <rect key="frame" x="0.0" y="22" width="320" height="44"/>
+                                <rect key="frame" x="0.0" y="86" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="wHZ-j1-AhK" id="aJJ-uo-ljh">
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
@@ -72,7 +72,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eBj-LT-lxu" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="862" y="78"/>
+            <point key="canvasLocation" x="1388" y="78"/>
         </scene>
         <!--Groups View Controller-->
         <scene sceneID="XHq-BM-GSh">
@@ -84,7 +84,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Group Cell" id="UJ1-23-4eD">
-                                <rect key="frame" x="0.0" y="22" width="320" height="44"/>
+                                <rect key="frame" x="0.0" y="86" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="UJ1-23-4eD" id="Jsa-lk-mAV">
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
@@ -97,13 +97,14 @@
                             <outlet property="delegate" destination="oLk-UB-GxU" id="eF4-rP-0ge"/>
                         </connections>
                     </tableView>
+                    <navigationItem key="navigationItem" id="Tnh-Ac-kXM"/>
                     <connections>
                         <segue destination="WSZ-PV-tb6" kind="push" identifier="toMembersSegue" id="Wrp-aP-Weu"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8nw-Hf-Sp7" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="463" y="78"/>
+            <point key="canvasLocation" x="989" y="78"/>
         </scene>
         <!--Login View Controller-->
         <scene sceneID="ebD-ga-gOh">
@@ -141,6 +142,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Axx-oS-354" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="97" y="753"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="ja8-Hd-IEi">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="LFF-Fc-4N0" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="CH3-ju-JaL">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="oLk-UB-GxU" kind="relationship" relationship="rootViewController" id="BqU-5M-z4b"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fcA-rv-KUm" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="463" y="78"/>
         </scene>
     </scenes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
