--- a/WhoPays?/WhoPays.storyboard
+++ b/WhoPays?/WhoPays.storyboard
@@ -45,7 +45,7 @@
             </objects>
             <point key="canvasLocation" x="97" y="76"/>
         </scene>
-        <!--Members View Controller-->
+        <!--Members View Controller - Members-->
         <scene sceneID="Zrf-8I-5td">
             <objects>
                 <tableViewController id="WSZ-PV-tb6" customClass="WPMembersViewController" sceneMemberID="viewController">
@@ -68,13 +68,13 @@
                             <outlet property="delegate" destination="WSZ-PV-tb6" id="OOy-Sr-G3N"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="2aD-H5-uC1"/>
+                    <navigationItem key="navigationItem" title="Members" id="2aD-H5-uC1"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eBj-LT-lxu" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1388" y="78"/>
         </scene>
-        <!--Groups View Controller-->
+        <!--Groups View Controller - Groups-->
         <scene sceneID="XHq-BM-GSh">
             <objects>
                 <tableViewController id="oLk-UB-GxU" customClass="WPGroupsViewController" sceneMemberID="viewController">
@@ -97,9 +97,16 @@
                             <outlet property="delegate" destination="oLk-UB-GxU" id="eF4-rP-0ge"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="Tnh-Ac-kXM"/>
+                    <navigationItem key="navigationItem" title="Groups" id="Tnh-Ac-kXM">
+                        <barButtonItem key="rightBarButtonItem" systemItem="stop" id="YcC-WI-kCy">
+                            <connections>
+                                <action selector="signOutButtonPressed:" destination="oLk-UB-GxU" id="ZHb-eb-9SY"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <segue destination="WSZ-PV-tb6" kind="push" identifier="toMembersSegue" id="Wrp-aP-Weu"/>
+                        <segue destination="mrS-W6-Mec" kind="modal" identifier="signOutSegue" modalTransitionStyle="flipHorizontal" id="vcg-TE-w8J"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8nw-Hf-Sp7" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -128,7 +135,11 @@
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <items>
                                     <navigationItem title="Authenticate with Splitwise" id="nxC-dO-Ibf">
-                                        <barButtonItem key="rightBarButtonItem" systemItem="stop" id="Twg-2t-WgH"/>
+                                        <barButtonItem key="rightBarButtonItem" systemItem="stop" id="Twg-2t-WgH">
+                                            <connections>
+                                                <action selector="closeButtonPressed:" destination="HXb-l6-iYh" id="0eW-jp-CVg"/>
+                                            </connections>
+                                        </barButtonItem>
                                     </navigationItem>
                                 </items>
                             </navigationBar>
@@ -141,7 +152,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Axx-oS-354" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="97" y="753"/>
+            <point key="canvasLocation" x="97" y="756"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="ja8-Hd-IEi">
